Fix hamburger button z-index

--- a/src/scss/object/component/_drawer.scss
+++ b/src/scss/object/component/_drawer.scss
@@ -3,6 +3,10 @@
 		z-index: 10000;
 	}
 
+	&__btn {
+		z-index: 1;
+	}
+
 	&__menu {
 		list-style: none;
 		margin: 0;
